# Ides

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Doxyfile  README.md  assembly.sbt  build.sbt  output.yml
cmake/Modules/: FindLLVM.cmake
docs/: Ides.tex
etc/editor/sublime3/: Ides.sublime-build
ides/: CMakeLists.txt  Lang.h  common.h  ides.h  lexer.hpp  lexer.l  main.cpp  parser.y
ides-headergen/: CMakeLists.txt  main.cpp
ides/AST/: AST.cpp  AST.h  ASTCodeGen.cpp  ASTCodeGenStatement.cpp  ASTContext.cpp  ASTContext.h  ASTExpression.h  ASTMDGen.cpp  ASTStatement.h  ASTVisitor.h  ConstantExpression.cpp  ConstantExpression.h  Declaration.cpp  Declaration.h  DeclarationContext.cpp  DeclarationContext.h  Expression.cpp  Expression.h  Statement.cpp  Statement.h
ides/ASTSerializer/: MetadataSerializer.cpp  MetadataSerializer.h
ides/ASTVisitor/: ASTVisitor.cpp  ASTVisitor.h
ides/CodeGen/: CodeGen.cpp  CodeGen.h  CodeGenDeclaration.cpp  CodeGenExpression.cpp  CodeGenStatement.cpp  DIGen.cpp  DIGen.h  LLVMTypeVisitor.cpp  LLVMTypeVisitor.h
ides/Compiling/: Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  QualType.cpp  QualType.h  SemGraph.cpp  SemGraph.h  SymbolTable.h  Type.cpp  Type.h  TypeDecl.cpp  TypeDecl.h  Value.cpp  Value.h
ides/Diagnostics/: Diagnostics.cpp  Diagnostics.h  Messages.h  SourceLocation.cpp  SourceLocation.h
ides/Parsing/: AST.cpp  AST.h  AstTraits.cpp  AstTraits.h  AstVisitor.cpp  AstVisitor.h  CAst.cpp  CAst.h  ParseContext.cpp  ParseContext.h  Parser.cpp  Parser.h  ParserCommon.h  Tokens.h
ides/Project/: Project.cpp  Project.h
ides/Source/: SourceLocation.cpp  SourceLocation.h  SourcePackage.cpp  SourcePackage.h
ides/Types/: NumericOperators.cpp  Type.cpp  Type.h  TypeVisitor.cpp  TypeVisitor.h
ides/Util/: Match.h  MultiStack.h  Singleton.h  Util.h  Visitor.h
idesc/: CMakeLists.txt  main.cpp
libides/: CMakeLists.txt
libides/include/ides/: common.h
libides/include/ides/AST/: AST.h  ASTConstantExpression.h  ASTExpression.h  ASTNode.h  ASTStatement.h
libides/include/ides/Diagnostics/: SourceLocation.h
libides/include/ides/Parsing/: Parser.h  ParserCommon.h  ParserImpl.h
libides/include/ides/Types/: IdesType.h  Type.h
libides/include/ides/Util/: SymbolTable.h
libides/include/ides/semparse/: parse_input.hpp
libides/semparse/: generate_parser.sh  language.semparse-grammar
libides/src/: lexer.l  parser.y
libides/src/AST/: AST.cpp  ASTBinaryExpressionCodeGen.cpp  ASTCHeader.cpp  ASTCodeGen.cpp  ASTCodeGenCompoundType.cpp  ASTCodeGenOperator.cpp  ASTCodeGenStatement.cpp  ASTDOT.cpp  ASTMDGen.cpp  ASTUnaryExpressionCodeGen.cpp
libides/src/Diagnostics/: SourceLocation.cpp
libides/src/Parsing/: Parser.cpp
libides/src/Types/: IntegerOperators.cpp  NumericOperators.cpp  Type.cpp
libides/src/Util/: SymbolTable.cpp
libides/src/semparse/: parse_input.cpp
project/: plugins.sbt
src/main/scala/com/ides_lang/: Idesc.scala
src/main/scala/com/ides_lang/semantics/: Fn.scala  Module.scala  Scope.scala  Sema.scala
src/main/scala/com/ides_lang/syntax/: Expr.scala  Parser.scala  Scanner.scala
src/main/scala/com/ides_lang/types/: TypeDecl.scala
src/main/scala/com/ides_lang/util/: SymbolTable.scala
src/test/scala/com/ides_lang/test/: IdesSpec.scala
src/test/scala/com/ides_lang/test/semantics/: SemanticsSpec.scala
src/test/scala/com/ides_lang/test/syntax/: SyntaxSpec.scala
support/: ides.vim
support/OSX/Homebrew/: ides.rb
test/: BasicTest.ides  CMakeLists.txt  Runner.py
test/LanguageTests/: BadTypeErrorTest.ides  EvaluativeBlockTest.ides  ImplicitConversionTest.ides  LogicConstructs.ides  PointerTest.ides  Pointers.ides
test/LinkerTests/: BasicTest.ides  BasicTest_Aux.ides
